...
      scrollable
      refreshControl={<RefreshControl refreshing={isLoading} onRefresh={refresh} />}>
      <View className="w-full gap-5">
        <View className="gap-2">
          <View className="bg-primary/10 self-start py-1">
            <Text className="text-sm font-bold uppercase tracking-wider text-primary">
              Personal info
            </Text>
          </View>

          <Text className="text-2xl font-extrabold tracking-tight text-foreground">
            {user.name}
          </Text>
...
