...
          <View className="mb-4">
            <View className="flex-row gap-1">
              <Text className="mb-1.5 text-base font-semibold text-gray-700">PPO Number</Text>
              <Text className="mb-1.5 text-base font-semibold text-destructive">*</Text>
            </View>
            <Input
              testID="reg-ppo-input"
              value={value}
              onChangeText={(v) => {
                return onChange(v);
              }}
              onBlur={onBlur}
              placeholder="Enter your PPO Number"
...
              </Text>
            )}
          </View>
        )}
      />
      <Button
        testID="reg-ppo-check"
        isLoading={isPending}
        size="lg"
        disabled={isPending}
        onPress={form.handleSubmit(onSubmit)}>
        Check PPO Status
      </Button>
...
